src/test/deca/syntax/valid/homemade/parser/test/test_pars_val_class_decl_meth_block_multi_param.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour une class, decl methode block
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

class iden {
    int iden (type1 iden3, type2 iden2){
<<<<<<< HEAD
        float x = 8 ; expr;
    }
    
=======
    float x = 8 ; expr; ;}
>>>>>>> fc628b9cd931176fae0a297f441f64a5ebb2e12a
}