src/test/deca/syntax/invalid/homemade/test/test_pars_inv_class_field_public.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 12 : Erreur (expected ";" before "}")
//    
//
// Historique:
//    cree le 04/01/2023

class idaho {
    public int x = 314;
}